# fast_json_normalize

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
fast_json_normalize/: __init__.py  cythonized.pyx  fast_json_normalize.py  normalize_json.py  test_main.py
tests/: test_main.py  test_types.py
