[bdist_wheel]
universal = 1

[metadata]
name = fast_json_normalize
version = 0.0.9
author = Sam Purkis
author_email = sam.purkis@hotmail.co.uk
description = A package designed to be a drop in replacement for the pandas json normalize function, as it can be rather slow when dealing with very large json files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smpurkis/fast_json_normalize
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
pandas = >=1.0.1
pytest = >=6.2.2
cython = >=0.29.22

